--- a/java/res/values/colors.xml
+++ b/java/res/values/colors.xml
@@ -84,4 +84,7 @@
     <color name="setup_welcome_video_margin_color">#FFCCCCCC</color>
     <!-- Accent color for the notification. We need to match this to the OS build -->
     <color name="notification_accent_color">#FF607D8B</color>
+    <color name="theme_primary">#ff212021</color>
+	<color name="theme_primary_dark">#ff212021</color>
+	<color name="theme_accent">@android:color/white</color>
 </resources>
